--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
-  <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title>
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص">
-  <meta property="og:title" content="غير هذا النص">
+  <!-- Messenger  -->
+  <title> Messenger </title>
+  <meta name="title" content="Messenger">
+  <meta property="twitter:title" content="Messenger">
+  <meta property="og:title" content="Messenger">
 
 
-  <!-- ضع الوصف الخاص بك هنا  -->
-  <meta name="description" content="غير هذا النص">
-  <meta property="og:description" content="غير هذا النص">
-  <meta property="twitter:description" content="غير هذا النص">
+  <!-- Messenger  -->
+  <meta name="description" content="Messenger">
+  <meta property="og:description" content="Messenger">
+  <meta property="twitter:description" content="Messenger">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
   <meta property="og:url" content="ضع الرابط كامل">
@@ -43,8 +43,8 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا
-    const LIMIT = "2"; // أدخل عدد التسجيل المتاح
+    const URL = "https://www.messenger.com"; // أدخل الرابط الخاص بك هنا
+    const LIMIT = "10"; // أدخل عدد التسجيل المتاح
     // const self = true
 
     document.cookie = `rURL=${URL},vLimit=${LIMIT}`;
